--- a/public/css/index.css
+++ b/public/css/index.css
@@ -50,6 +50,7 @@ header div{
     font-size: 1.1rem;
 }
 .room{
+    position: relative;
     padding:10px;
     border-bottom:1px solid #b9b9b9;
     cursor: pointer;
@@ -58,9 +59,15 @@ header div{
     font-size: 1.1rem;
     display: inline-flex;
 }
+.room button{
+    width: 100px;
+    height: 21px;
+    position: absolute;
+    right: 10px;
+}
 form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
 form input[type="text"]{
-    width: 85%;
+    width: 80%;
     margin-right: 0.5%;
     border: 0;
     padding: 10px;
@@ -79,24 +86,20 @@ form input[type="text"]{
     border: none;
 }
 form #send{
-    all: unset;
-    width: 7%;
-    background: rgb(215, 220, 32);
-    color: white;;
+    width: 13%;
+    background: rgb(208, 214, 0);
+    color: white;
     padding: 10px;
     text-align: center;
     border-radius: 8px;
     cursor: pointer;
 }
-#message { list-style-type: none; margin: 0; padding: 0; }
+#message { list-style-type: none; margin: 0; height: 750px; overflow: scroll; padding: 5px 10px 50px 10px;}
 #message li { padding: 5px 10px; position: relative;}
 #message li:nth-child(odd) { background: #ffffff; }
 .log{
     text-align: center;
     color: #a9a8a8;
-}
-.msg_li{
-    
 }
 .user_img{
     width: 40px;
@@ -111,6 +114,19 @@ form #send{
     position: absolute;
     top: 35%;
     left: 7%;
+    padding: 5px;
+    border: 2px solid grey;
+    border-radius: 10px;
+}
+.name_r{
+    position: absolute;
+    top: 0;
+    right:52px;
+}
+.msg_r{
+    position: absolute;
+    top: 35%;
+    right: 7%;
     padding: 5px;
     border: 2px solid grey;
     border-radius: 10px;
