--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,23 +4,28 @@ header{
     width: 100%;
     background: black;
     color: white;
-    height: 35px;
+    height: 40px;
     padding: 5px;
     font-size: 1.2rem;
+    border-bottom: 3px solid #989292;
 }
 header div{
     display: initial;
     text-align: right;
     float: right;
     cursor: pointer;
-    padding: 3px;
+    padding: 0.5px;
+}
+.title{
+    font-weight: 700;
+}
+.h_icon,.js_room img{
+    width: 30px;
+    height: 30px;
 }
 .js_room img{
     position: relative;
     top:-5px;
-    width: 30px;
-    height: 30px;
-
 }
 .login_page{
     position: absolute;
@@ -71,6 +76,8 @@ form input[type="text"]{
     margin-right: 0.5%;
     border: 0;
     padding: 10px;
+    height: 34px;
+    font-size: 0.9rem;
 }
 .exit_btn img{
     position: absolute;
@@ -84,6 +91,7 @@ form input[type="text"]{
     padding: 10px;
     border-radius: 50px;
     border: none;
+    font-weight: 800;
 }
 form #send{
     width: 13%;
@@ -185,11 +193,38 @@ form #send{
     width: 100px;
     height: 20px;
 }
-footer{
-    background: #000; padding: 3px; 
+nav{
+    display: flex;
+    background: #e0e0e0; 
     position: absolute; 
     bottom: 0; 
     width: 100%;
     height: 60px;
     text-align: center;
+    border-top: 2px solid #cecece;;
+}
+nav a{
+    position: relative;
+    flex-grow: 1;
+    color: white;
+    font-size: 15px;
+    text-decoration: none;
+}
+a span{
+    margin-left:6px;
+    font-weight: 500;
+}
+a img{
+    position: relative;
+    height: 35px;
+    top: 12px;
+}
+.active span,.active img{
+    color:black;
+}
+.clock{
+    text-align: center;
+    font-weight: 600;
+    font-size: 0.5rem;
+    text-shadow: 6px 2px 4px #b3b3b3;
 }
