--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,24 +16,10 @@ header div{
     cursor: pointer;
     padding: 0.5px;
 }
-.title{
-    font-weight: 700;
-}
-.h_icon,.js_room img{
-    width: 30px;
-    height: 30px;
-}
-.js_room img{
-    position: relative;
-    top:-5px;
-}
-.login_page{
-    position: absolute;
-    background-color: #000;
-    width: 100%;
-    height: 100%;
-    top:0;
-}
+.title{font-weight: 700;}
+.h_icon,.js_room img{width: 30px;height: 30px;}
+.js_room img{position: relative;top:-5px;}
+.login_page{position: absolute;background-color: #000;width: 100%;height: 100%;top:0;}
 .login_page .form{
     width: 100%;
     height: 100px;
@@ -41,10 +27,7 @@ header div{
     top:40%;
     position: absolute;
 }
-.form_h3,.nickname{
-    color:white;
-    font-size: 1.1rem;
-}
+.form_h3,.nickname{color:white;font-size: 1.1rem;}
 .nickname{
     all:unset;
     border-bottom: 1px solid white;
@@ -56,20 +39,13 @@ header div{
 }
 .room{
     position: relative;
-    padding:10px;
+    padding:15px;
     border-bottom:1px solid #b9b9b9;
     cursor: pointer;
 }
-.room p{
-    font-size: 1.1rem;
-    display: inline-flex;
-}
-.room button{
-    width: 100px;
-    height: 21px;
-    position: absolute;
-    right: 10px;
-}
+.room_ul li:nth-child(1){border-top: 1px solid #b9b9b9;}
+.room p{font-size: 1.1rem;display: inline-flex;}
+.room button{width: 100px;height: 21px;position: absolute;right: 10px;}
 form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
 form input[type="text"]{
     width: 80%;
@@ -105,32 +81,11 @@ form #send{
 #message { list-style-type: none; margin: 0; height: 750px; overflow: scroll; padding: 5px 10px 50px 10px;}
 #message li { padding: 5px 10px; position: relative;}
 #message li:nth-child(odd) { background: #ffffff; }
-.log{
-    text-align: center;
-    color: #a9a8a8;
-}
-.user_img{
-    width: 40px;
-    height: 40px;
-}
-.user_name{
-    position: absolute;
-    top:0;
-    margin-left: 5px;
-}
-.user_msg{
-    position: absolute;
-    top: 35%;
-    left: 7%;
-    padding: 5px;
-    border: 2px solid grey;
-    border-radius: 10px;
-}
-.name_r{
-    position: absolute;
-    top: 0;
-    right:52px;
-}
+.log{text-align: center;color: #a9a8a8;}
+.user_img{width: 40px;height: 40px;}
+.user_name{position: absolute;top:0;margin-left: 5px;}
+.user_msg{position: absolute;top: 35%;left: 7%;padding: 5px;border: 2px solid grey;border-radius: 10px;}
+.name_r{position: absolute;top: 0;right:52px;}
 .msg_r{
     position: absolute;
     top: 35%;
@@ -163,17 +118,9 @@ form #send{
     background: white;
     margin: 5px;
 }
-.d1{
-   transform: rotate(45deg);
-   top:10px;
-}
-.d2{
-    visibility: hidden;
-}
-.d3{
-    transform: rotate(-45deg);
-    top:-10px;
-}
+.d1{transform: rotate(45deg);top:10px;}
+.d2{visibility: hidden;}
+.d3{transform: rotate(-45deg);top:-10px;}
 .room_input{
     position: absolute;
     top: 30%;
@@ -184,15 +131,8 @@ form #send{
     font-size: 1.0rem;
     border: none;
 }
-.room_btns{
-    position: absolute;
-    top: 62%;
-    left: 30%;
-}
-.room_btns button{
-    width: 100px;
-    height: 20px;
-}
+.room_btns{position: absolute;top: 62%;left: 30%;}
+.room_btns button{width: 100px;height: 20px;}
 nav{
     display: flex;
     background: #e0e0e0; 
@@ -210,21 +150,14 @@ nav a{
     font-size: 15px;
     text-decoration: none;
 }
-a span{
-    margin-left:6px;
-    font-weight: 500;
-}
-a img{
-    position: relative;
-    height: 35px;
-    top: 12px;
-}
-.active span,.active img{
-    color:black;
-}
+a span{margin-left:6px;font-weight: 500;}
+a img{position: relative;height: 35px;top: 12px;}
+.active span,.active img{color:black;}
 .clock{
     text-align: center;
     font-weight: 600;
     font-size: 0.5rem;
     text-shadow: 6px 2px 4px #b3b3b3;
+    margin-bottom: 9px;
+    margin-top: 5px;
 }
