--- a/public/css/friend.css
+++ b/public/css/friend.css
@@ -43,3 +43,23 @@
  margin: 10px;
  color:#cecece;
 }
+.f_div{
+    display: flex;
+    position: relative;
+}
+.friend_id{
+    all:unset;
+    width: 100%;
+    height: 20px;
+    border-top: 1px solid #dadada;;
+    padding:5px;
+    flex-grow: 1;
+}
+.friend_id+span{
+    position: absolute;
+    right: 5px;
+    cursor:pointer;
+    font-weight:bold;
+    visibility:hidden;
+    align-self: center;
+}
