--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,8 +11,8 @@ header{
 }
 header div{display: initial;text-align: right;float: right;cursor: pointer;padding: 0.5px;}
 .title{font-weight: 700;}
-.h_icon,.js_room img{width: 30px;height: 30px;}
-.js_room img{position: relative;top:-5px;}
+.h_icon,.js_room img,.js_friend img{width: 30px;height: 30px;}
+.js_room img,.js_friend img{position: relative;top:-3px;}
 .login_page{position: absolute;background-color: #000;width: 100%;height: 100%;top:0;}
 .login_page .login_form,.signup_form{
     width: 100%;
@@ -162,6 +162,7 @@ nav a{
     color: white;
     font-size: 15px;
     text-decoration: none;
+    box-shadow: inset -1px 1px 5px 6px #e2e2e2;
 }
 a span{margin-left:6px;font-weight: 500;}
 a img{position: relative;height: 35px;top: 12px;}
@@ -176,3 +177,10 @@ a img{position: relative;height: 35px;top: 12px;}
 }
 .chat_menu div{flex-grow: 1;cursor: pointer;color: white;text-shadow: 1px 2px 3px #cecccc;}
 .menu_active{color:black !important;font-weight: 700;}
+.icon{
+    flex-grow: 1;
+    text-align: center;
+    padding: 10px;
+    color: white;
+    background: black;
+}
