--- a/public/css/more.css
+++ b/public/css/more.css
@@ -20,6 +20,10 @@
     font-weight: 700;
     cursor: pointer;
 }
+.more_options div>img{
+    width: 40px;
+    height: 40px;
+}
 .more_main>div{
     position: relative;
 }
