--- a/public/css/friend.css
+++ b/public/css/friend.css
@@ -39,6 +39,10 @@
     right: 0;
     cursor: pointer;
 }
+.friend_ul{
+    border-bottom: 1px solid #ececec;
+    overflow: scroll;
+}
 .friend_div p{
  margin: 10px;
  color:#cecece;
@@ -62,4 +66,58 @@
     font-weight:bold;
     visibility:hidden;
     align-self: center;
+}
+.friend_info{
+    position: absolute;
+    left: 39%;
+    right: 39%;
+    width: 200px;
+    margin: 10px auto;
+    text-align: center;
+    height: 220px;
+    align-items: center;
+    border: 1px solid #c3c3c3;
+    border-radius: 10px;
+    top: 27%;
+    background-color: white;
+    box-shadow: 4px 3px 6px 4px #b5b5b5;
+}
+.info_form{
+    position: relative;
+    top: 0px;
+}
+.info_form p:nth-child(1){
+    text-align: right;
+    margin-right: 7px;
+    font-weight: 700;
+    cursor: pointer;
+}
+.info_form button{
+    margin: 10px;
+    height: 25px;
+    width: 100px;
+    border: 1px solid white;
+    background: black;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.info_form button:disabled{
+    background: #15151554;
+}
+.f_down{
+    display: block;
+    -webkit-animation: slide-down .3s ease-out;
+    -moz-animation: slide-down .3s ease-out;
+}
+.f_up{
+    display: none;
+}
+@-webkit-keyframes slide-down {
+    0% { opacity: 0; -webkit-transform: translateY(-10%); }   
+  100% { opacity: 1; -webkit-transform: translateY(0); }
+}
+@-moz-keyframes slide-down {
+    0% { opacity: 0; -moz-transform: translateY(-10%); }   
+  100% { opacity: 1; -moz-transform: translateY(0); }
 }
