--- a/public/css/index.css
+++ b/public/css/index.css
@@ -111,9 +111,9 @@ form #send{
     position: absolute;
     top: 20%;
     left: 30%;
-    height: 30%;
-    width: 500px;
-    background: #8ec0ff;
+    height: 200px;
+    width: 400px;
+    background: #ececec;
     border-radius: 10px;
     box-shadow: 3px 3px 7px 4px #737373;
     display: none;
@@ -136,7 +136,7 @@ form #send{
 .d3{transform: rotate(-45deg);top:-10px;}
 .room_input{
     position: absolute;
-    top: 30%;
+    top: 50px;
     left: 20%;
     width: 60%;
     height: 40px;
@@ -144,7 +144,7 @@ form #send{
     font-size: 1.0rem;
     border: none;
 }
-.room_btns{position: absolute;top: 62%;left: 30%;}
+.room_btns{display:flex;position: absolute;top: 120px;left: 100px;}
 .room_btns button{width: 100px;height: 20px;}
 nav{
     display: flex;
