--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -7,15 +7,26 @@ body {
   font-size: 13px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: #e3e3e3;
 }
 header {
-  width: 100%;
-  background: black;
+  display: flex;
+  align-items: center;
+  height: 5vh;
+  width: 60%;
+  background: #b7bfff;
   color: white;
-  height: 40px;
   padding: 5px;
   font-size: 1.2rem;
   border-bottom: 3px solid #989292;
+  margin: 0 auto;
+}
+main {
+  width: 60%;
+  margin: 0 auto;
+  background-color: white;
+  min-height: 95vh;
+  overflow: scroll;
 }
 header div {
   display: initial;
@@ -33,325 +44,142 @@ header div {
   width: 30px;
   height: 30px;
 }
-.js_room img,
-.js_friend img {
-  position: relative;
-  top: -3px;
-}
-.login_page {
-  position: absolute;
-  background-color: #000;
-  width: 100%;
-  height: 100%;
-  top: 0;
-}
-.login_page .login_form,
-.signup_form {
-  width: 100%;
-  height: 100px;
-  text-align: center;
-  top: 30%;
-  position: absolute;
-}
-.login_h3,
-.signup_h3,
-.name {
-  color: white;
-  font-size: 1.1rem;
-}
-
-.login_btns button {
-  cursor: pointer;
-  margin: 15px;
-  width: 130px;
-  height: 25px;
-  border: none;
-  border-radius: 5px;
-  background-color: white;
-  color: black;
-}
-.list_container {
-  overflow: scroll;
-}
-.group_list {
-  display: none;
-}
-.one_list {
-  display: block;
-}
-.g_room {
-  position: relative;
-  padding: 15px;
-  border-bottom: 1px solid #b9b9b9;
-  cursor: pointer;
-}
-.g_room div {
-  display: flex;
-  align-items: center;
-}
-.g_room div > span {
-  margin-left: 10px;
-}
-.o_room {
-  position: relative;
-  padding: 15px;
-  border-bottom: 1px solid #b9b9b9;
-  cursor: pointer;
-  display: flex;
-}
-.o_room > div {
-  margin-left: 10px;
-}
-.o_room > div > p:nth-child(1) {
-  font-weight: 700;
-}
-.o_room > div > p:nth-child(2) {
-  margin-top: 5px;
-  font-size: 0.5rem;
-  color: #8a8a8a;
-}
-
-.room_ul li:nth-child(1) {
-  border-top: 1px solid #b9b9b9;
-}
-.group_list li {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-}
-.group_list li .g_room {
-  flex-grow: 2;
-}
-.group_list li button {
-  display: none;
-  flex-grow: 0.1;
-  background: #bb0000;
-  color: white;
-  font-weight: 800;
-  height: inherit;
-  border: 0.5px solid #b9b9b9;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.g_room p {
-  font-size: 1.1rem;
-  display: inline-flex;
-}
-.g_room button {
-  width: 100px;
-  height: 21px;
-  position: absolute;
-  right: 10px;
-}
-form {
-  background: #000;
-  padding: 3px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-form input[type="text"] {
-  width: 80%;
-  margin-right: 0.5%;
-  border: 0;
-  padding: 10px;
-  height: 34px;
-  font-size: 0.9rem;
-}
-.exit_btn img {
-  position: absolute;
-  top: 3px;
-  right: 5px;
-  width: 30px;
-  height: 30px;
-}
-#img_btn {
-  width: 5%;
-  padding: 10px;
-  border-radius: 50px;
-  border: none;
-  font-weight: 800;
-}
-form #send {
-  width: 13%;
-  background: rgb(208, 214, 0);
-  color: white;
-  padding: 10px;
-  text-align: center;
-  border-radius: 8px;
-  cursor: pointer;
-}
-#message {
-  list-style-type: none;
-  margin: 0;
-  height: 750px;
-  overflow: scroll;
-  padding: 5px 10px 50px 10px;
-}
-#message li {
-  padding: 5px 10px;
-  position: relative;
-}
-#message li:nth-child(odd) {
-  background: #ffffff;
-}
-.log {
-  text-align: center;
-  color: #a9a8a8;
-}
-.group_img {
-  border: 2px solid black;
-  border-radius: 20px;
-}
-.user_img,
-.group_img {
-  width: 40px;
-  height: 40px;
-}
-.user_name {
-  position: absolute;
-  top: 0;
-  margin-left: 5px;
-}
-.user_msg {
-  position: absolute;
-  top: 35%;
-  left: 7%;
-  padding: 5px;
-  border: 2px solid grey;
-  border-radius: 10px;
-}
-.name_r {
-  position: absolute;
-  top: 0;
-  right: 52px;
-}
-.msg_r {
-  position: absolute;
-  top: 35%;
-  right: 7%;
-  padding: 5px;
-  border: 2px solid grey;
-  border-radius: 10px;
-}
-.room_modal {
-  position: absolute;
-  top: 20%;
-  left: 30%;
-  height: 200px;
-  width: 400px;
-  background: #ececec;
-  border-radius: 10px;
-  box-shadow: 3px 3px 7px 4px #737373;
-  display: none;
-}
-.exit_container {
-  position: absolute;
-  height: 25px;
-  right: 0;
-  cursor: pointer;
-}
-.d1,
-.d2,
-.d3 {
-  position: relative;
-  height: 5px;
-  width: 15px;
-  background: white;
-  margin: 5px;
-}
-.d1 {
-  transform: rotate(45deg);
-  top: 10px;
-}
-.d2 {
-  visibility: hidden;
-}
-.d3 {
-  transform: rotate(-45deg);
-  top: -10px;
-}
-.room_input {
-  position: absolute;
-  top: 50px;
-  left: 20%;
-  width: 60%;
-  height: 40px;
-  padding: 10px;
-  font-size: 1rem;
-  border: none;
-}
-.room_btns {
-  display: flex;
-  position: absolute;
-  top: 120px;
-  left: 100px;
-}
-.room_btns button {
-  width: 100px;
-  height: 20px;
-}
-nav {
-  display: flex;
-  background: #eaeaea;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  text-align: center;
-  border-top: 2px solid #cecece;
-}
-nav a {
-  position: relative;
-  flex-grow: 1;
-  color: white;
-  font-size: 15px;
-  text-decoration: none;
-  box-shadow: inset -1px 1px 5px 6px #e2e2e2;
-}
-a span {
-  margin-left: 6px;
-  font-weight: 500;
-}
-a img {
-  position: relative;
-  height: 35px;
-  top: 12px;
-}
-.active span,
-.active img {
-  color: black;
-}
-.clock {
-  text-align: center;
-  font-weight: 600;
-  font-size: 0.5rem;
-  text-shadow: 6px 2px 4px #b3b3b3;
-  margin-bottom: 9px;
-  margin-top: 5px;
-}
-.chat_menu {
-  display: flex;
-  text-align: center;
-  background-color: #ececec;
-  align-items: center;
-  height: 25px;
-}
-.chat_menu div {
-  flex-grow: 1;
-  cursor: pointer;
-  color: white;
-  text-shadow: 1px 2px 3px #cecccc;
-}
-.menu_active {
-  color: black !important;
-  font-weight: 700;
-}
 .icon {
   flex-grow: 1;
   text-align: center;
   padding: 10px;
   color: white;
   background: black;
+}
+.message-section {
+  background-color: #e0daff;
+  width: 100%;
+  height: 87vh;
+}
+.message-section .message-count-joiner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+  font-weight: bold;
+  background-color: thistle;
+}
+
+.form-container {
+  position: absolute;
+  bottom: 0;
+  width: 60%;
+  height: 8vh;
+  background-color: #b7bfff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.form-container form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.form-container form input {
+  all: unset;
+  height: 50%;
+}
+.form-container form .message-text {
+  resize: none;
+  flex: 0.9;
+  background-color: white;
+  padding: 5px;
+  font-size: 1rem;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.form-container form .message-sender {
+  width: 10%;
+  text-align: center;
+  background-color: #9b59b6;
+  margin: 10px;
+  color: white;
+  font-weight: bolder;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.message-container {
+  height: 95%;
+  overflow: scroll;
+}
+.message-item {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+.message-item.right {
+  align-items: flex-end;
+}
+.message-item.left {
+  align-items: flex-start;
+}
+.message-item .message-leave {
+  text-align: center;
+  color: white;
+  font-weight: 800;
+  padding: 7px;
+  font-size: 1.1rem;
+}
+.user-name {
+  display: inline-flex;
+  padding: 5px;
+  margin: 5px;
+  width: fit-content;
+  font-size: 1rem;
+  border: 1px solid white;
+  border-radius: 20px;
+  background: white;
+  font-weight: 800;
+}
+.message-text {
+  position: relative;
+  padding: 10px;
+  background: white;
+  border-radius: 10px;
+  font-size: 1.1rem;
+  max-width: 90%;
+  word-break: break-word;
+}
+.message-text.left {
+  margin-left: 40px;
+}
+.message-text.left::before {
+  content: "";
+  background-color: white;
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  left: 0px;
+  top: 0;
+}
+
+.message-text.right {
+  margin-right: 40px;
+}
+.message-text.right::after {
+  content: "";
+  background-color: white;
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  right: 0px;
+  top: 0;
+}
+
+@media (max-width: 768px) {
+  header,
+  main,
+  .form-container {
+    width: 100%;
+  }
 }
