--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -12,9 +12,10 @@ body {
 header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   height: 5vh;
   width: 60%;
-  background: #b7bfff;
+  background: #a2a5c3;
   color: white;
   padding: 5px;
   font-size: 1.2rem;
@@ -24,9 +25,24 @@ header {
 main {
   width: 60%;
   margin: 0 auto;
-  background-color: white;
+  background-color: transparent;
   min-height: 95vh;
   overflow: scroll;
+}
+.background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+.background .frame-container {
+  width: 60%;
+  height: 100%;
+  filter: blur(2px);
+  background-color: black;
 }
 header div {
   display: initial;
@@ -52,7 +68,7 @@ header div {
   background: black;
 }
 .message-section {
-  background-color: #e0daff;
+  background-color: #e0daff52;
   width: 100%;
   height: 87vh;
 }
@@ -73,7 +89,7 @@ header div {
   bottom: 0;
   width: 60%;
   height: 8vh;
-  background-color: #b7bfff;
+  background-color: #a2a5c3;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -101,7 +117,7 @@ header div {
 .form-container form .message-sender {
   width: 10%;
   text-align: center;
-  background-color: #9b59b6;
+  background-color: #7e55b5b0;
   margin: 10px;
   color: white;
   font-weight: bolder;
@@ -123,12 +139,25 @@ header div {
 .message-item.left {
   align-items: flex-start;
 }
-.message-item .message-leave {
+
+@keyframes noticeShowUp {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.message-item .message-notice {
   text-align: center;
   color: white;
   font-weight: 800;
   padding: 7px;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
+  background: #3a3a3a94;
+  border-radius: 20px;
+  animation: noticeShowUp 1s ease-in-out;
 }
 .user-name {
   display: inline-flex;
@@ -149,6 +178,7 @@ header div {
   font-size: 1.1rem;
   max-width: 90%;
   word-break: break-word;
+  animation: noticeShowUp 0.7s ease-in-out;
 }
 .message-text.left {
   margin-left: 40px;
@@ -179,7 +209,8 @@ header div {
 @media (max-width: 768px) {
   header,
   main,
-  .form-container {
+  .form-container,
+  .background .frame-container {
     width: 100%;
   }
 }
