--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  background-color: #0000008c;
+  background-color: #000000e8;
   width: 100%;
   height: 100%;
   top: 0;
@@ -19,7 +19,7 @@
   text-align: center;
   top: 30%;
   padding: 20px;
-  background-color: #7c8009;
+  background-color: #000000;
   border-radius: 20px;
 }
 .login_h3,
@@ -27,7 +27,6 @@
   color: white;
   font-size: 1.1rem;
 }
-
 .login_btns {
   display: flex;
   align-items: center;
